// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gatsby-remark-embed-snippet Language detection should set the correct Prism language for CSS files 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "lang": "css",
          "position": Object {
            "end": Object {
              "column": 24,
              "line": 1,
              "offset": 23,
            },
            "start": Object {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "code",
          "value": "html { height: 100%; }",
        },
      ],
      "position": Object {
        "end": Object {
          "column": 24,
          "line": 1,
          "offset": 23,
        },
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 24,
      "line": 1,
      "offset": 23,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`gatsby-remark-embed-snippet Language detection should set the correct Prism language for HTML files 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "lang": "html",
          "position": Object {
            "end": Object {
              "column": 25,
              "line": 1,
              "offset": 24,
            },
            "start": Object {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "code",
          "value": "<html></html>",
        },
      ],
      "position": Object {
        "end": Object {
          "column": 25,
          "line": 1,
          "offset": 24,
        },
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 25,
      "line": 1,
      "offset": 24,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`gatsby-remark-embed-snippet Language detection should set the correct Prism language for JavaScript files 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "lang": "jsx",
          "position": Object {
            "end": Object {
              "column": 23,
              "line": 1,
              "offset": 22,
            },
            "start": Object {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "code",
          "value": "const foo = \\"bar\\";",
        },
      ],
      "position": Object {
        "end": Object {
          "column": 23,
          "line": 1,
          "offset": 22,
        },
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 23,
      "line": 1,
      "offset": 22,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`gatsby-remark-embed-snippet Language detection should set the correct Prism language for Markdown files 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "lang": "markup",
          "position": Object {
            "end": Object {
              "column": 23,
              "line": 1,
              "offset": 22,
            },
            "start": Object {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "code",
          "value": "# Hi",
        },
      ],
      "position": Object {
        "end": Object {
          "column": 23,
          "line": 1,
          "offset": 22,
        },
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 23,
      "line": 1,
      "offset": 22,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`gatsby-remark-embed-snippet Language detection should set the correct Prism language for Rust files 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "lang": "rust",
          "position": Object {
            "end": Object {
              "column": 23,
              "line": 1,
              "offset": 22,
            },
            "start": Object {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "code",
          "value": "extern crate lazy_static;",
        },
      ],
      "position": Object {
        "end": Object {
          "column": 23,
          "line": 1,
          "offset": 22,
        },
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 23,
      "line": 1,
      "offset": 22,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`gatsby-remark-embed-snippet Language detection should set the correct Prism language for YAML files 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "lang": "yaml",
          "position": Object {
            "end": Object {
              "column": 25,
              "line": 1,
              "offset": 24,
            },
            "start": Object {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "code",
          "value": "name: Brian Vaughn",
        },
      ],
      "position": Object {
        "end": Object {
          "column": 25,
          "line": 1,
          "offset": 24,
        },
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 25,
      "line": 1,
      "offset": 24,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`gatsby-remark-embed-snippet Language detection should set the correct Prism language for shell scripts 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "lang": "bash",
          "position": Object {
            "end": Object {
              "column": 23,
              "line": 1,
              "offset": 22,
            },
            "start": Object {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "code",
          "value": "pwd",
        },
      ],
      "position": Object {
        "end": Object {
          "column": 23,
          "line": 1,
          "offset": 22,
        },
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 23,
      "line": 1,
      "offset": 22,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`gatsby-remark-embed-snippet Language detection should set the default Prism language for unknown file extensions 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "lang": "none",
          "position": Object {
            "end": Object {
              "column": 20,
              "line": 1,
              "offset": 19,
            },
            "start": Object {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "code",
          "value": "const foo = \\"bar\\";",
        },
      ],
      "position": Object {
        "end": Object {
          "column": 20,
          "line": 1,
          "offset": 19,
        },
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 20,
      "line": 1,
      "offset": 19,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`gatsby-remark-embed-snippet should convert embed inlineCode nodes to Prism code blocks 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "lang": "jsx",
          "position": Object {
            "end": Object {
              "column": 23,
              "line": 1,
              "offset": 22,
            },
            "start": Object {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "code",
          "value": "const foo = \\"bar\\";",
        },
      ],
      "position": Object {
        "end": Object {
          "column": 23,
          "line": 1,
          "offset": 22,
        },
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 23,
      "line": 1,
      "offset": 22,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`gatsby-remark-embed-snippet should not error if missing optional config options 1`] = `[Function]`;

exports[`gatsby-remark-embed-snippet should not modify non-embed inlineCode nodes 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "position": Object {
            "end": Object {
              "column": 20,
              "line": 1,
              "offset": 19,
            },
            "start": Object {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "inlineCode",
          "value": "console.log(\\"hi\\")",
        },
      ],
      "position": Object {
        "end": Object {
          "column": 20,
          "line": 1,
          "offset": 19,
        },
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 20,
      "line": 1,
      "offset": 19,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;
